# Backend_EC

./: .env.example  .gitignore  ABA_PAYWAY_INTEGRATION_FIX.md  ABA_PAYWAY_INTEGRATION_GUIDE.md  AUDIT_LOG_GUIDE.md  AUTHENTICATION_AUDIT_REPORT.md  AUTHENTICATION_FIXES_SUMMARY.md  CART_FIX_SUMMARY.md  CHECKOUT_ERROR_FIX.md  CODE_FIXES_SUMMARY.md  COMPLETE_CHECKOUT_GUIDE.md  COMPLETE_ECOMMERCE_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  EMAIL_VERIFICATION_GUIDE.md  ENDPOINTS_NOW_VISIBLE.md  FINAL_IMPLEMENTATION_GUIDE.md  FINAL_PROJECT_STATUS.md  FINAL_SETUP_STEPS.md  FIXES_APPLIED.md  FRONTEND_PAYMENT_EXAMPLE.html  GEMINI.md  HYBRID_REFRESH_SUMMARY.md  INVENTORY_MANAGEMENT_GUIDE.md  INVENTORY_SYSTEM_SUMMARY.md  INVENTORY_VS_VARIANT_STOCK_EXPLAINED.md  MIGRATION_GUIDE.md  MISSING_FEATURES_SUMMARY.md  NEW_FEATURES_IMPLEMENTATION_SUMMARY.md  ORDER_FLOW_AND_STOCK_REDUCTION.md  ORDER_IMPLEMENTATION_SUMMARY.md  ORDER_PROCESSING_FLOW_GUIDE.md  ORDER_STATUS_FLOW.md  PASSWORD_RESET_IMPLEMENTATION_SUMMARY.md  PASSWORD_RESET_WITH_CODE_GUIDE.md  PAYMENT_MODEL_FIX.md  PAYMENT_QUICK_START.md  PAYMENT_TO_DELIVERY_FLOW.md  PAYMENT_TROUBLESHOOTING.md  PRODUCT_DELETE_CHANGES.md  PRODUCT_INVENTORY_STRUCTURE.md  (+31 more)
alembic/: env.py
alembic/versions/: 0b3ceed6b9f3_initial_migration.py  162e5db2569a_some_changes.py  188db8670fa4_add_for_image_store.py  1c0ab6876c2c_add_coupon_reward_tables_and_fields.py  1cf09a40841f_remove_stock_quantity_from_product_.py  2e0e9d9d9174_update_address_coordinates_precision.py  3fe71e54b8e1_describe_your_changes.py  (+11 more)
app/: database.py  main.py
(+112 files in other folders)
